Updated homepage and fixed styles

--- a/about_tech.html
+++ b/about_tech.html
@@ -195,7 +195,7 @@
 									<li><a href="tech_blog/graphic_design_blog.html">🎨 Principles of Graphic Design</a></li>
 									<li><a href="tech_blog/web_design_blog_part2.html">⚙️ Back-End Development</a></li>
 									<li><a href="tech_blog/web_dvp_blog.html">📝 Front-End Development</a></li>
-									<li><a href="tech_blog/cyber_trend.html">🚨 Understanding Cybersecurity</a></li>
+									<li><a href="tech_blog/index.html">🚨 Understanding Cybersecurity</a></li>
 									<li><a href="tech_blog/cybertrend_blog_part2.html">💾 The Rise of Ransomware</a></li>
 								</ul>
 							</li>
