--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta name="description" content="web design, graphic design, cyber security">
+		<!-- PAGE TITLE -->
+	<title>Web Design Trends 2025: What's New? - Seketech Informative</title>
+		
+		<!-- PAGE DESCRIPTION -->
+	<meta name="description" content="Discover the latest Ai web design trends in 2025 including cyber Security ~ Ai and Extensive Graphic Design Ai Version.">
+	  
+		<!-- AUTHOR + SOCIAL TAGS (Optional but Helpful) -->
+	<meta property="og:title" content="Ai In Web Design Trends 2025: What's New? - Seketech Informative" />
+	<meta property="og:url" content="https://seketechinformative.netlify.app" />
 	<meta name="keywords" content="web design, Ai, cybersecurity, technology blog, graphic design, front-end development, back-end development, cyber trends, ransomware, web development, UI/UX design, hacking news, online security, website security, coding blog, tech news">
     <meta name="author" content="Seke Tech Informative">
 	<meta name="MobileOptimized" content="320">
@@ -198,7 +206,7 @@
 									<li><a href="tech_blog/graphic_design_blog.html">🎨 Principles of Graphic Design</a></li>
 									<li><a href="tech_blog/web_design_blog_part2.html">⚙️ Back-End Development</a></li>
 									<li><a href="tech_blog/web_dvp_blog.html">📝 Front-End Development</a></li>
-									<li><a href="tech_blog/cyber_trend.html">🚨 Understanding Cybersecurity</a></li>
+									<li><a href="tech_blog/index.html">🚨 Understanding Cybersecurity</a></li>
 									<li><a href="tech_blog/cybertrend_blog_part2.html">💾 The Rise of Ransomware</a></li>
 								</ul>
 							</li>
